<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/app_title"
        android:textColor="#ffffff"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_charity" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/app_description"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/app_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/app_description2"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#6A1B9A"
        android:fontFamily="@font/open_sans_regular"
        android:onClick="toLoginIn"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sign_up_btn"
        android:onClick="toSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#6A1B9A"
        android:fontFamily="@font/open_sans_regular"
        android:padding="15dp"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="20sp" />


</LinearLayout>