<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/username_label"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="jsmith"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/password_label"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#6A1B9A"
        android:fontFamily="@font/open_sans_regular"
        android:onClick="login"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>
