<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/s_firstname"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="John"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/s_lastname"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="Smith"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/s_username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/s_username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/s_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password_label"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/s_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#6A1B9A"
        android:onClick="signUp"
        android:padding="20dp"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="26sp" />

</LinearLayout>